--- a/app/views/authentication/start.html.erb
+++ b/app/views/authentication/start.html.erb
@@ -1,2 +1,4 @@
 <h1 class="title is-1">Esegui il login con Wikimedia Commons per caricare le tue fotografie dall'app</h1>
-<%= link_to "Accedi a Wikimedia Commons", '/auth/mediawiki', method: :post, class: "button is-info is-large" %>
+<%= link_to "Accedi a Wikimedia Commons", @mediawiki_url, method: :post, class: "button is-info is-large" %><br/><br/>
+
+<%= link_to "Accedi alla wiki di test", @test_url, method: :post, class: "button is-danger is-medium"%>
