--- a/app/views/authentication/success.html.erb
+++ b/app/views/authentication/success.html.erb
@@ -1,2 +1,6 @@
 <h1 class="title is-1">Autenticazione completata!</h1>
 <h2 class="subtitle">Grazie per aver eseguito l'accesso, da ora potrai caricare le tue fotografie tramite l'app. Ora puoi chiudere questa finestra: clicca su "Fine" o sulla X in alto a sinistra.</h2>
+
+<% if @user.testuser %>
+    <h2 class="subtitle"><b>Attenzione!</b> Hai effettuato la registrazione come utente di test. Le tue foto non saranno realmente caricate su Wikimedia Commons bensì su una <%= link_to "wiki di prova", "https://testwlm.ferdinando.me" %>.</h2>
+<% end %>
