HTTP method corretto

--- a/app/views/authentication/start.html.erb
+++ b/app/views/authentication/start.html.erb
@@ -1,4 +1,4 @@
 <h1 class="title is-1">Esegui il login con Wikimedia Commons per caricare le tue fotografie dall'app</h1>
-<%= link_to "Accedi a Wikimedia Commons", @mediawiki_url, method: :post, class: "button is-info is-large" %><br/><br/>
+<%= link_to "Accedi a Wikimedia Commons", @mediawiki_url, class: "button is-info is-large" %><br/><br/>
 
-<%= link_to "Accedi alla wiki di test", @test_url, method: :post, class: "button is-danger is-medium"%>
+<%= link_to "Accedi alla wiki di test", @test_url, class: "button is-danger is-medium"%>
