Fix stringa tradotta

--- a/app/views/faq/en.html.erb
+++ b/app/views/faq/en.html.erb
@@ -160,5 +160,5 @@ From the app it is possible to see only photos uploaded after the latest login w
 <div class="container block-margin">
 <h2 class="title is-4">Should I uplaod all my photos from the same device or only through the app?
 </h2> 
-No, you can upload photos form different devices and you can use the same account for all of them: you just need to repeat the login operation in the app of each device. Moreover you can upload photos from your PC using  <%= link_to "sito del concorso", "https://www.wikimedia.it/wiki-loves-monuments/elenco-monumenti/"%>.
+No, you can upload photos form different devices and you can use the same account for all of them: you just need to repeat the login operation in the app of each device. Moreover you can upload photos from your PC using  <%= link_to "the contest website", "https://www.wikimedia.it/wiki-loves-monuments/elenco-monumenti/"%>.
 </div>
