Correggo typo nelle faq

--- a/app/views/faq/it.html.erb
+++ b/app/views/faq/it.html.erb
@@ -115,7 +115,7 @@ Il caricamento non è un'operazione reversibile attraverso la app. Più in gener
 <div class="container block-margin">
 <h2 class="title is-4">Nella scheda del monumento che mi interessa non è presente il bottone di caricamento. Come mai?
 </h2> 
-Ai sensi del concorso il caricamento è possibile solo dal 1' al 30 settembre di ogni anno, sebbene si possa caricare qualsiasi foto inedita anche scattata antecedentemente a tale periodo.
+Ai sensi del regolamento del concorso il caricamento è possibile solo dal 1º al 30 settembre di ogni anno, sebbene si possa caricare qualsiasi foto inedita anche scattata antecedentemente a tale periodo.
 
 </div> 
 
