--- a/app/views/faq/it.html.erb
+++ b/app/views/faq/it.html.erb
@@ -88,13 +88,13 @@ Affinché un monumento possa partecipare a Wiki Loves Monuments Italia è necess
 <div class="container block-margin">
 <h2 class="title is-4">Come carico una foto del monumento?
 </h2> 
-Dalla pagina della scheda di dettaglio del monumento, utilizzando il bottone "Carica le tue foto" ti viene presentato l'elenco delle foto presenti sul tuo dispositivo. Scegli la foto di interesse con un doppio tocco e passi alla pagina di caricamento dove puoi eventualmente ma non necessariamente modificare il nome proposto (automaticamente composto dal nome del comune dal nome del monumento è da un timbro temporale che garantisce l'unicità del nome), la descrizione e la data di creazione (ottenuta dai dati efix dell'immagine se disponibili). Con il bottone "Conferma e carica" avvii il processo di caricamento: un messaggio ti confermerà che la foto è stata accodata per il caricamento in Wikimedia Commons dove sarà automaticamente inserita nelle categorie abilitate per il concorso.
+Dalla pagina della scheda di dettaglio del monumento, utilizzando il bottone "Carica le tue foto" ti viene presentato l'elenco delle foto presenti sul tuo dispositivo. Scegli la foto di interesse con un tocco e passi alla pagina di caricamento dove puoi eventualmente ma non necessariamente modificare il nome proposto (automaticamente composto dal nome del comune dal nome del monumento è da un timbro temporale che garantisce l'unicità del nome), la descrizione e la data di creazione (ottenuta dai dati efix dell'immagine se disponibili). Con il bottone "Conferma e carica" avvii il processo di caricamento: un messaggio ti confermerà che la foto è stata accodata per il caricamento in Wikimedia Commons dove sarà automaticamente inserita nelle categorie abilitate per il concorso.
 </div>
 
 <div class="container block-margin">
 <h2 class="title is-4">Come posso caricare più foto dello stesso monumento?
 </h2>
-Seguendo gli stessi passi del caricamento singolo, ma non facendo un doppio tocco su una singola foto ma singoli tocchi su tutte le foto che vuoi caricare di quel monumento. Quando hai completato la selezione con il tasto "Apri" tutte le foto selezionate sono trasferite alla pagina di caricamento. Il bottone "Conferma e carica", le caricherà tutte.
+Seguendo gli stessi passi del caricamento singolo, ma non facendo un rapido tocco su una singola foto ma un tocco prolungato sulla prima foto fino a selezionarla e quindi su tutte le altre foto che vuoi caricare di quel monumento. Quando hai completato la selezione con il tasto "Apri" tutte le foto selezionate sono trasferite alla pagina di caricamento. Il bottone "Conferma e carica", le caricherà tutte.
 
 </div>
 
