--- a/app/views/faq/en.html.erb
+++ b/app/views/faq/en.html.erb
@@ -94,13 +94,13 @@ To have a monument participating in Wiki Loves Monuments Italia it's required th
 
 <div class="container block-margin">
 <h2 class="title is-4">How can I upload a photo of a monument?</h2>
-From the summary page of the document, tapping the button "Upload you photos" you get the list of photos present on your device. Choose the photo you are interested in with a double tap and you get the upload page where you can possibly (but you are not obliged to)  modify the suggested name (automatically created concatenating location name, monument name and a timestamp to grant the uniqueness of the name), the suggested description and the creation date (retrieved from efix data of the photo when available). With the button "Confirm and upload" you start the uploading process: a message will confirm that photo is queued for uploading in Wikimedia Commons where it will be automatically inserted in the appropriate contest categories.
+From the summary page of the document, tapping the button "Upload you photos" you get the list of photos present on your device. Choose the photo you are interested in with a tap and you get the upload page where you can possibly (but you are not obliged to)  modify the suggested name (automatically created concatenating location name, monument name and a timestamp to grant the uniqueness of the name), the suggested description and the creation date (retrieved from efix data of the photo when available). With the button "Confirm and upload" you start the uploading process: a message will confirm that photo is queued for uploading in Wikimedia Commons where it will be automatically inserted in the appropriate contest categories.
 </div>
 
 <div class="container block-margin">
 <h2 class="title is-4">How can I upload more photos of the same monument?
 </h2>
-Following the same steps of the single upload, but not double tapping a single image, but rather single tapping all the images that you wish to upload for that monument. When you are done with photo selection, tapping the button "Open" all selected photos are transferred to the upload page. The button "Confirm and upload" will upload all of them.
+Following the same steps of the single upload, but not fast tapping a single image, but rather with a prolonged tapping on the first image, until selecting it, and then on all other images that you wish to upload for that monument. When you are done with photo selection, tapping the button "Open" all selected photos are transferred to the upload page. The button "Confirm and upload" will upload all of them.
 
 </div>
 
