--- a/app/views/faq/it.html.erb
+++ b/app/views/faq/it.html.erb
@@ -148,7 +148,7 @@ La base dati per la generazione della mappa viene aggiornata ogni ora circa. Se 
 <div class="container block-margin">
 <h2 class="title is-4">Quando vado a vedere le foto che ho caricato non vedo quelle più vecchie. Come mai?
 </h2>
-È possibile vedere dalla app solo le foto caricate successivamente all'ultimo login con l'utenza in uso; comunque non ti preoccupare le tue foto caricate precedentemente sono Commons e rimangono valide per il concorso. Se vuoi puoi consultare l'elenco completo dei tuoi caricamenti in Commons da <%= link_to "questa pagina", "https://commons.wikimedia.org/w/index.php?title=Special:ListFiles" %> andando a specificare il tuo nome utente.
+È possibile vedere dalla app solo le foto caricate successivamente all'ultimo login con l'utenza in uso; comunque non ti preoccupare le tue foto caricate precedentemente sono Commons e rimangono valide per il concorso. Se vuoi puoi consultare l'elenco completo dei tuoi caricamenti in Commons con il bottone "Tutte le tue foto su Commons".
 </div>
 
 <div class="container block-margin">
