--- a/app/views/faq/en.html.erb
+++ b/app/views/faq/en.html.erb
@@ -154,7 +154,7 @@ The database for map generation is updated about every one hour. If you have rec
 <div class="container block-margin">
 <h2 class="title is-4">When I look at photos that I uploaded, I can't see the oldest ones. Why?
 </h2>
-From the app it is possible to see only photos uploaded after the latest login with the account in use; anyway, don't worry your previously uploaded photos are in Commons and are still valid for the contest. If you wish, you can check at any time the full list of your uploads in Commons using the button "All your photos on Wikimedia Commons".
+From the app it is possible to see only photos uploaded after the latest login with the account in use; anyway, don't worry your previously uploaded photos are in Commons and are still valid for the contest. If you wish, you can check at any time the full list of your uploads in Commons using the button "All your photos on Commons".
 </div>
 
 <div class="container block-margin">
