--- a/app/views/faq/en.html.erb
+++ b/app/views/faq/en.html.erb
@@ -94,9 +94,16 @@ To have a monument participating in Wiki Loves Monuments Italia it's required th
 
 <div class="container block-margin">
 <h2 class="title is-4">How can I upload a photo of a monument?</h2>
-From the summary page of the document, tapping the button "Upload you photos" you get the list of photos present on your device. Choose the photo you are interested in with a tap and you get the upload page where you can possibly (but you are not obliged to)  modify the suggested name (automatically created concatenating location name, monument name and a timestamp to grant the uniqueness of the name), the suggested description and the creation date (retrieved from efix data of the photo when available). With the button "Confirm and upload" you start the uploading process: a message will confirm that photo is queued for uploading in Wikimedia Commons where it will be automatically inserted in the appropriate contest categories.
+From the summary page of the document, tapping the button "Upload you photos" you get the list of photos present on your device. Choose the photo you are interested in with a tap and you get the upload page where you can possibly (but you are not obliged to)  modify the suggested name (automatically created concatenating location name, monument name and a timestamp to grant the uniqueness of the name), the suggested description and the creation date (retrieved from efix data of the photo when available). With the button "Confirm and upload" you start the uploading process: a message will confirm that photo is queued for uploading in Wikimedia Commons. In the period between 1st and 30th September, it will be automatically inserted in the appropriate contest categories.
+
 </div>
 
+<div class="container block-margin">
+<h2 class="title is-4">Can I upload a photo of a monument outside of the contest period?</h2>
+Yes, you can but it will not participate in the contest.
+  
+</div>
+  
 <div class="container block-margin">
 <h2 class="title is-4">How can I upload more photos of the same monument?
 </h2>
@@ -119,13 +126,6 @@ Uploading is an operation that can not be reverted through the app. Moreover pho
 
 <div class="container block-margin">
 <h2 class="title is-4">In the summary page of the monument I'm interested in, there is no button for uploading. Why?
-</h2>
-According to contest rules, photos can only be uploaded from Semptember 1st through September 30th, even if you can upload photos taken at any time, even before the aforementioned range.
-
-</div>
-
-<div class="container block-margin">
-<h2 class="title is-4">It's September but still there is not the upload button Why?   
 </h2>
 For some monuments, the owner or the legal custodian, gave authorization for participating in the contest only in specific years. Such monuments are shown through a grey marker and have the following message in the summary page: "The authorization for this monument has expired".
 
