--- a/app/views/faq/it.html.erb
+++ b/app/views/faq/it.html.erb
@@ -88,13 +88,20 @@ Affinché un monumento possa partecipare a Wiki Loves Monuments Italia è necess
 <div class="container block-margin">
 <h2 class="title is-4">Come carico una foto del monumento?
 </h2> 
-Dalla pagina della scheda di dettaglio del monumento, utilizzando il bottone "Carica le tue foto" ti viene presentato l'elenco delle foto presenti sul tuo dispositivo. Scegli la foto di interesse con un tocco e passi alla pagina di caricamento dove puoi eventualmente ma non necessariamente modificare il nome proposto (automaticamente composto dal nome del comune dal nome del monumento è da un timbro temporale che garantisce l'unicità del nome), la descrizione e la data di creazione (ottenuta dai dati efix dell'immagine se disponibili). Con il bottone "Conferma e carica" avvii il processo di caricamento: un messaggio ti confermerà che la foto è stata accodata per il caricamento in Wikimedia Commons dove sarà automaticamente inserita nelle categorie abilitate per il concorso.
+Dalla pagina della scheda di dettaglio del monumento, utilizzando il bottone "Carica le tue foto" ti viene presentato l'elenco delle foto presenti sul tuo dispositivo. Scegli la foto di interesse con un tocco e passi alla pagina di caricamento dove puoi eventualmente ma non necessariamente modificare il nome proposto (automaticamente composto dal nome del comune dal nome del monumento è da un timbro temporale che garantisce l'unicità del nome), la descrizione e la data di creazione (ottenuta dai dati efix dell'immagine se disponibili). Con il bottone "Conferma e carica" avvii il processo di caricamento: un messaggio ti confermerà che la foto è stata accodata per il caricamento in Wikimedia Commons. Nel periodo dal 1° al 30 settembre di ogni anno sarà inoltre automaticamente inserita nelle categorie abilitate per il concorso.
 </div>
 
 <div class="container block-margin">
 <h2 class="title is-4">Come posso caricare più foto dello stesso monumento?
 </h2>
 Seguendo gli stessi passi del caricamento singolo, ma non facendo un rapido tocco su una singola foto ma un tocco prolungato sulla prima foto fino a selezionarla e quindi su tutte le altre foto che vuoi caricare di quel monumento. Quando hai completato la selezione con il tasto "Apri" tutte le foto selezionate sono trasferite alla pagina di caricamento. Il bottone "Conferma e carica", le caricherà tutte.
+
+</div>
+    
+<div class="container block-margin">
+<h2 class="title is-4">Posso caricare la foto di un monumento al di fuori del periodo del concorso?
+</h2>
+Si, ma non parteciperà al concorso.
 
 </div>
 
@@ -115,14 +122,8 @@ Il caricamento non è un'operazione reversibile attraverso la app. Più in gener
 <div class="container block-margin">
 <h2 class="title is-4">Nella scheda del monumento che mi interessa non è presente il bottone di caricamento. Come mai?
 </h2> 
-Ai sensi del regolamento del concorso il caricamento è possibile solo dal 1º al 30 settembre di ogni anno, sebbene si possa caricare qualsiasi foto inedita anche scattata antecedentemente a tale periodo.
-
-</div> 
-
-<div class="container block-margin">
-<h2 class="title is-4">È settembre ma comunque non c'è il bottone di caricamento. Come mai?
-</h2>
 Per alcuni monumenti il proprietario o il custode legale hanno dato il permesso di partecipazione al concorso solo per anni specifici. Questi monumenti sono rappresentati da un segnaposto grigio e riportano la seguente indicazione nella scheda: "L'autorizzazione per questo monumento è scaduta".
+
 </div>
 
 <div class="container block-margin">
