Spiegazione icona grigia

--- a/app/views/faq/en.html.erb
+++ b/app/views/faq/en.html.erb
@@ -76,7 +76,7 @@ There are two ways:
 <li><%= image_tag "tree blue.png", width: "50px" %> stands for an Italian veteran tree with at least one photo already uploaded by someone; this does not prevent you to uploading further photos</li>
 <li><%= image_tag "Info red.png", width: "50px" %> stands for a monument without any known uploaded photo; be the first uploading one!</li>
 <li><%= image_tag "tree red.png", width: "50px" %> stands for an Italian veteran tree without any known uploaded photo; be the first uploading one!</li>
-<li><%= image_tag "Info grey.png", width: "50px" %> stands for a monument whose authorization for participation in the contest has expired. It won't be possible to upload photos of the monuments until the owner or the legal custodian has renewed the authorization.</li>
+<li><%= image_tag "Info grey.png", width: "50px" %> stands for a monument whose authorization for participation in the contest has expired. It won't be possible to upload photos of the monuments until the owner or the legal custodian has renewed the authorization. This icon on iOS is replaced by a purple pin.</li>
 </div>
 
 <div class="container block-margin">
