--- a/app/views/faq/it.html.erb
+++ b/app/views/faq/it.html.erb
@@ -68,7 +68,7 @@ Vi sono due modalità:
         <li><%= image_tag "tree blue.png", width: "50px" %> rappresenta un albero monumentale d'Italia per cui è stata caricata almeno una fotografia; ciò non impedisce che tu possa caricarne delle altre</li>
         <li><%= image_tag "Info red.png", width: "50px" %>  rappresenta un monumento per cui non risulta che sia mai stata caricata una foto. Fallo tu per primo!</li>
         <li><%= image_tag "tree red.png", width: "50px" %>  rappresenta un albero monumentale d'Italia per cui non risulta che sia mai stata caricata una foto. Fallo tu per primo!</li>
-        <li><%= image_tag "Info grey.png", width: "50px" %>  rappresenta un monumento per cui è scaduta l'autorizzazione per la partecipazione al concorso. Finché il proprietario o il curatore legale non rinnoveranno l'autorizzazione non sarà possibile caricare foto del monumento.</li>
+        <li><%= image_tag "Info grey.png", width: "50px" %>  rappresenta un monumento per cui è scaduta l'autorizzazione per la partecipazione al concorso. Finché il proprietario o il curatore legale non rinnoveranno l'autorizzazione non sarà possibile caricare foto del monumento. Questa icona è sostituita da un pin viola su iOS.</li>
     </ol>
 </div>
 </div>
