--- a/app/views/faq/en.html.erb
+++ b/app/views/faq/en.html.erb
@@ -77,6 +77,8 @@ There are two ways:
 <li><%= image_tag "Info red.png", width: "50px" %> stands for a monument without any known uploaded photo; be the first uploading one!</li>
 <li><%= image_tag "tree red.png", width: "50px" %> stands for an Italian veteran tree without any known uploaded photo; be the first uploading one!</li>
 <li><%= image_tag "Info grey.png", width: "50px" %> stands for a monument whose authorization for participation in the contest has expired. It won't be possible to upload photos of the monuments until the owner or the legal custodian has renewed the authorization. This icon on iOS is replaced by a purple pin.</li>
+<li><%= image_tag "Info orange.png", width: "50px" %> stands for the monument whose summary page was presented. This icon is only used when reachingt the map from a summary page.</li>
+<li><%= image_tag "tree orange.png", width: "50px" %> stands for the Italian veteran tree whose summary page was presented. This icon is only used when reachingt the map from a summary page.</li>
 </div>
 
 <div class="container block-margin">
