--- a/app/views/faq/it.html.erb
+++ b/app/views/faq/it.html.erb
@@ -66,9 +66,11 @@ Vi sono due modalità:
     <ol>
         <li><%= image_tag "Info blue.png", width: "50px" %> rappresenta un monumento per cui è stata caricata almeno una fotografia; ciò non impedisce che tu possa caricarne delle altre</li>
         <li><%= image_tag "tree blue.png", width: "50px" %> rappresenta un albero monumentale d'Italia per cui è stata caricata almeno una fotografia; ciò non impedisce che tu possa caricarne delle altre</li>
-        <li><%= image_tag "Info red.png", width: "50px" %>  rappresenta un monumento per cui non risulta che sia mai stata caricata una foto. Fallo tu per primo!</li>
-        <li><%= image_tag "tree red.png", width: "50px" %>  rappresenta un albero monumentale d'Italia per cui non risulta che sia mai stata caricata una foto. Fallo tu per primo!</li>
-        <li><%= image_tag "Info grey.png", width: "50px" %>  rappresenta un monumento per cui è scaduta l'autorizzazione per la partecipazione al concorso. Finché il proprietario o il curatore legale non rinnoveranno l'autorizzazione non sarà possibile caricare foto del monumento. Questa icona è sostituita da un pin viola su iOS.</li>
+        <li><%= image_tag "Info red.png", width: "50px" %> rappresenta un monumento per cui non risulta che sia mai stata caricata una foto. Fallo tu per primo!</li>
+        <li><%= image_tag "tree red.png", width: "50px" %> rappresenta un albero monumentale d'Italia per cui non risulta che sia mai stata caricata una foto. Fallo tu per primo!</li>
+        <li><%= image_tag "Info grey.png", width: "50px" %> rappresenta un monumento per cui è scaduta l'autorizzazione per la partecipazione al concorso. Finché il proprietario o il curatore legale non rinnoveranno l'autorizzazione non sarà possibile caricare foto del monumento. Questa icona è sostituita da un pin viola su iOS.</li>
+        <li><%= image_tag "Info orange.png", width: "50px" %> rappresenta il monumento di cui si stava visualizzando la scheda di dettaglio. Questa icona è usata solo quando si giunge alla mappa da una scheda di dettaglio.</li>
+        <li><%= image_tag "tree orange.png", width: "50px" %> rappresenta l'albero monumentale di cui si stava visualizzando la scheda di dettaglio. Questa icona è usata solo quando si giunge alla mappa da una scheda di dettaglio.</li>
     </ol>
 </div>
 </div>
