--- a/app/views/authentication/success.html.erb
+++ b/app/views/authentication/success.html.erb
@@ -1,15 +1,33 @@
-<h1 class="title is-1">Autenticazione completata!</h1>
-<h2 class="subtitle">Grazie per aver eseguito l'accesso, da ora potrai caricare le tue fotografie tramite l'app. Ora puoi chiudere questa finestra: clicca su "Fine" o sulla X in alto a sinistra.</h2>
+<%= if @language == "it" %>
+    <h1 class="title is-1">Autenticazione completata!</h1>
+    <h2 class="subtitle">Grazie per aver eseguito l'accesso, da ora potrai caricare le tue fotografie tramite l'app. Ora puoi chiudere questa finestra: clicca su "Fine" o sulla X in alto a sinistra.</h2>
 
-<% if @user.try(:testuser) %>
-    <h2 class="subtitle"><b>Attenzione!</b> Hai effettuato la registrazione come utente di test. Le tue foto non saranno realmente caricate su Wikimedia Commons bensì su una <%= link_to "wiki di prova", "https://testwlm.ferdinando.me" %>.</h2>
-<% end %>
+    <% if @user.try(:testuser) %>
+        <h2 class="subtitle"><b>Attenzione!</b> Hai effettuato la registrazione come utente di test. Le tue foto non saranno realmente caricate su Wikimedia Commons bensì su una <%= link_to "wiki di prova", "https://ferdi.host" %>.</h2>
+    <% end %>
 
-<div class="content">
-Al momento, stai utilizzando <%= @users.count %> dispositivi. Essi sono denominati:
-<ul>
-<% @users.each do |u| %>
-    <li><%= u.device_name %><%= "Senza nome" if u.device_name.blank? %></li>
+    <div class="content">
+    Al momento, stai utilizzando <%= @users.count %> dispositivi. Essi sono denominati:
+    <ul>
+    <% @users.each do |u| %>
+        <li><%= u.device_name %><%= "Senza nome" if u.device_name.blank? %></li>
+    <% end %>
+    </ul>
+    </div>
+<% else %>
+    <h1 class="title is-1">Authentication completed!</h1>
+    <h2 class="subtitle">Thanks for logging in, starting from now you'll be able to upload your photos with the app. Now you can close this window clicking on "Done" or on the X in the upper left corner.</h2>
+
+    <% if @user.try(:testuser) %>
+        <h2 class="subtitle"><b>Warning!</b> You've registered as test user. Your photos won't be effectively uploaded on Wikimedia Commons, but they will be uploaded on a <%= link_to "test wiki", "https://ferdi.host" %>.</h2>
+    <% end %>
+
+    <div class="content">
+    At the moment, you're using <%= @users.count %> devices. They're named:
+    <ul>
+    <% @users.each do |u| %>
+        <li><%= u.device_name %><%= "No name" if u.device_name.blank? %></li>
+    <% end %>
+    </ul>
+    </div>
 <% end %>
-</ul>
-</div>
