--- a/app/views/authentication/success.html.erb
+++ b/app/views/authentication/success.html.erb
@@ -1,4 +1,4 @@
-<%= if @language == "it" %>
+<% if @language == "it" %>
     <h1 class="title is-1">Autenticazione completata!</h1>
     <h2 class="subtitle">Grazie per aver eseguito l'accesso, da ora potrai caricare le tue fotografie tramite l'app. Ora puoi chiudere questa finestra: clicca su "Fine" o sulla X in alto a sinistra.</h2>
 
