Localizzo pagina di errore

--- a/app/views/pages/uhm.html.erb
+++ b/app/views/pages/uhm.html.erb
@@ -1,2 +1,7 @@
+<% if @language == "it" %>
 <h1 class="title is-1">Qualcosa è andato storto.</h1>
 <h2 class="subtitle">Non dovresti essere qui! Riavvia l'app e ricomincia il processo di autenticazione.</h2>
+<% else %>
+<h1 class="title is-1">Something went wrong.</h1>
+<h2 class="subtitle">You shouldn't be here! Restart the app and start again the authentication process.</h2>
+<% end %>
