Sono 4 ore ormai

--- a/app/views/faq/en.html.erb
+++ b/app/views/faq/en.html.erb
@@ -147,7 +147,7 @@ Due a very rare chance, someone else was uploading a photo of the same monument 
 <div class="container block-margin">
 <h2 class="title is-4">I uploaed the photo of a monument with red marker but it did not turn to blue. Why?
 </h2>
-The database for map generation is updated about every one hour. If you have recently uploaded the photo in Wikimedia Commons, then the change in the marker colour occurs with next refresh of the database for map generation.
+The database for map generation is updated about every one hour, while the presence of uploaded photos is updated every four hours. If you have recently uploaded the photo in Wikimedia Commons, then the change in the marker colour occurs with next refresh of the database for map generation.
 
 </div>
 
