--- a/app/views/faq/it.html.erb
+++ b/app/views/faq/it.html.erb
@@ -143,7 +143,7 @@ Per un'eventualità rarissima qualcuno contemporaneamente a te stava caricando u
 <div class="container block-margin">
 <h2 class="title is-4">Ho caricato la foto di un monumento con segnapunto rosso ma non è diventato blu. Come mai?
 </h2> 
-La base dati per la generazione della mappa viene aggiornata ogni ora circa. Se hai caricato recentemente la foto in Wikimedia Commons il cambio di colore avverrà con il successivo aggiornamento della base dati della mappa.
+La base dati per la generazione della mappa viene aggiornata ogni ora circa, mentre la presenza di foto caricate viene verificata ogni quattro ore. Se hai caricato recentemente la foto in Wikimedia Commons il cambio di colore avverrà con il successivo aggiornamento della base dati della mappa.
 </div> 
 
 <div class="container block-margin">
