--- a/app/views/faq/en.html.erb
+++ b/app/views/faq/en.html.erb
@@ -162,3 +162,8 @@ From the app it is possible to see only photos uploaded after the latest login w
 </h2> 
 No, you can upload photos form different devices and you can use the same account for all of them: you just need to repeat the login operation in the app of each device. Moreover you can upload photos from your PC using  <%= link_to "the contest website", "https://www.wikimedia.it/wiki-loves-monuments/elenco-monumenti/"%>.
 </div>
+
+<div class="container block-margin">
+<h2 class="title is-4">How can I contact you?</h2>
+For any requests of information or assistance, feedbacks or problem reports, you can send an e-mail to Wikimedia Italia at segreteria@wikimedia.it
+</div>
