--- a/app/views/faq/it.html.erb
+++ b/app/views/faq/it.html.erb
@@ -156,3 +156,8 @@ La base dati per la generazione della mappa viene aggiornata ogni ora circa, men
 <h2 class="title is-4">Devo caricare tutte le mie foto dallo stesso dispositivo o solo attraverso la app?</h2>
 No, puoi caricare le foto da più dispostivi e puoi usare la stessa utenza per tutti i dispositivi: dovrai però ripetere l'operazione di login interna alla app su ciascun dispositivo. Inoltre puoi caricare le foto da PC utilizzando il <%= link_to "sito del concorso", "https://www.wikimedia.it/wiki-loves-monuments/elenco-monumenti/"%>.
 </div>
+
+<div class="container block-margin">
+<h2 class="title is-4">Come posso contattarvi?</h2>
+Per qualsiasi informazione, richiesta di assistenza, feedback o segnalazione di problemi puoi contattare Wikimedia Italia a segreteria@wikimedia.it
+</div>
