--- a/app/views/authentication/success.html.erb
+++ b/app/views/authentication/success.html.erb
@@ -3,7 +3,7 @@
     <h2 class="subtitle">Grazie per aver eseguito l'accesso, da ora potrai caricare le tue fotografie tramite l'app. Ora puoi chiudere questa finestra: clicca su "Fine" o sulla X in alto a sinistra.</h2>
 
     <% if @user.try(:testuser) %>
-        <h2 class="subtitle"><b>Attenzione!</b> Hai effettuato la registrazione come utente di test. Le tue foto non saranno realmente caricate su Wikimedia Commons bensì su una <%= link_to "wiki di prova", "https://ferdi.host" %>.</h2>
+        <h2 class="subtitle"><b>Attenzione!</b> Hai effettuato la registrazione come utente di test. Le tue foto non saranno realmente caricate su Wikimedia Commons bensì su una <%= link_to "wiki di prova", "https://app-test.ferdinando.me" %>.</h2>
     <% end %>
 
     <div class="content">
@@ -19,7 +19,7 @@
     <h2 class="subtitle">Thanks for logging in, starting from now you'll be able to upload your photos with the app. Now you can close this window clicking on "Done" or on the X in the upper left corner.</h2>
 
     <% if @user.try(:testuser) %>
-        <h2 class="subtitle"><b>Warning!</b> You've registered as test user. Your photos won't be effectively uploaded on Wikimedia Commons, but they will be uploaded on a <%= link_to "test wiki", "https://ferdi.host" %>.</h2>
+        <h2 class="subtitle"><b>Warning!</b> You've registered as test user. Your photos won't be effectively uploaded on Wikimedia Commons, but they will be uploaded on a <%= link_to "test wiki", "https://app-test.ferdinando.me" %>.</h2>
     <% end %>
 
     <div class="content">
